// Copyright 2020 NTRLab 
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";

option java_multiple_files = true;
option java_package = "sawtooth.sdk.protobuf";
option go_package = "client_peer";

message ClientPeersGetRequest{
    enum Status {
        OK           = 0;
        MALICIOUS    = 1;
	MALICIOUS1   = 2;
	MALICIOUS2   = 3;
    }
    Status status = 1;
}

message ClientPeersGetResponse {
    enum Status {
        STATUS_UNSET = 0;
        OK = 1;
        ERROR = 2;
    }
    Status status = 1;
    repeated string peers = 2;
}
// for peers control
message ClientPeersControlRequest{
    enum Modes {
        UP      = 0;
        DOWN    = 1;
	INFO    = 2;
	
    }
    Modes  mode    = 1;
    string cluster = 2;
    string peer =    3;
}
message ClientPeersControlResponse {
    enum Status {
     
        OK    = 0;
        ERROR = 1;
    }
    Status status = 1;
    string info   = 2;
}

